♻️ refactor: Post 및 Tag 엔티티 테이블 이름 변경 및 태그 관련 수정 (#18)
- ErrorTag 제거 및 TechStack -> Tag로 이름 변경 및 통합
- Post 생성 시 태그 관련 메서드 이름 변경 및 로직 수정