@@ -1,7 +1,6 @@
 package troublog.backend.domain.trouble.service.command;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -11,28 +10,42 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import troublog.backend.domain.trouble.entity.Post;
 import troublog.backend.domain.trouble.entity.PostTag;
-import troublog.backend.domain.trouble.entity.TechStack;
+import troublog.backend.domain.trouble.entity.Tag;
 import troublog.backend.domain.trouble.repository.PostTagRepository;
-import troublog.backend.domain.trouble.repository.TechStackRepository;
+import troublog.backend.domain.trouble.service.query.TagQueryService;
 
 @Slf4j
 @Service
 @Transactional
 @RequiredArgsConstructor(access = AccessLevel.PROTECTED)
 public class PostTagCommandService {
-	private final TechStackRepository techStackRepository;
+
+	private final TagQueryService tagQueryService;
 	private final PostTagRepository postTagRepository;
 
-	public List<PostTag> savePostTags(List<String> tagNames, Post post) {
-		List<TechStack> existingTechStacks = techStackRepository.findByNameIn(tagNames);
+	public PostTag saveErrorPostTag(String tagName, Post post) {
+		Tag errorTag = tagQueryService.findErrorTagsByNames(tagName).getFirst();
+		PostTag postTag = createPostTag(errorTag, post);
+		return postTagRepository.save(postTag);
+	}
 
-		List<PostTag> postTags = existingTechStacks.stream()
-			.map(techStack -> PostTag.builder()
-				.post(post)
-				.techStack(techStack)
-				.build())
-			.collect(Collectors.toList());
-
+	public List<PostTag> saveTechStackPostTags(List<String> tagNames, Post post) {
+		List<Tag> techStackTags = tagQueryService.findTechStackTagsByNames(tagNames);
+		List<PostTag> postTags = techStackTags.stream()
+			.map(tag -> createPostTag(tag, post))
+			.toList();
 		return postTagRepository.saveAll(postTags);
+	}
+
+	private PostTag createPostTag(Tag tag, Post post) {
+		PostTag postTag = PostTag.builder()
+			.post(post)
+			.tag(tag)
+			.build();
+
+		postTag.assignPost(post);
+		postTag.assignTag(tag);
+
+		return postTag;
 	}
 }
